[package]
name = "aptos-in-memory-cache"
description = "In-memory cache"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.5.3", features = ["inline"] }
futures = "0.3.29"
parking_lot = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
allocative = "0.3.3"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }

[[bench]]
name = "test"
harness = false
path = "tests/my_benchmark.rs"

[profile.release]
debug = true

[profile.bench]
debug = true